--- a/documentation/classes/InstagramAPI-Response-Model-AccountAccessToolSettingsPages.html
+++ b/documentation/classes/InstagramAPI-Response-Model-AccountAccessToolSettingsPages.html
@@ -147,7 +147,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-Model-AccountAccessToolSettingsPages.html#constant_JSON_PROPERTY_MAP">JSON_PROPERTY_MAP</a></th>
                     <td class="phpdocumentor-cell"></td>
-                    <td class="phpdocumentor-cell">[&#039;date_joined&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;, &#039;switched_to_business&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;]</td>
+                    <td class="phpdocumentor-cell">[&#039;date_joined&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;, &#039;switched_to_business&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;, &#039;is_blocked&#039; =&gt; &#039;bool&#039;, &#039;page_name&#039; =&gt; &#039;string&#039;, &#039;data&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;]</td>
                 </tr>
                                                                                         <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-Model-AccountAccessToolSettingsPages.html#method_getDateJoined">getDateJoined()</a></th>
@@ -211,7 +211,7 @@
         <span class="phpdocumentor-signature__visibility">public</span>
         <span class="phpdocumentor-signature__type">mixed</span>
         <span class="phpdocumentor-signature__name">$JSON_PROPERTY_MAP</span>
-        = <span class="phpdocumentor-signature__default-value">[&#039;date_joined&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;, &#039;switched_to_business&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;]</span>
+        = <span class="phpdocumentor-signature__default-value">[&#039;date_joined&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;, &#039;switched_to_business&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;, &#039;is_blocked&#039; =&gt; &#039;bool&#039;, &#039;page_name&#039; =&gt; &#039;string&#039;, &#039;data&#039; =&gt; &#039;AccountAccessToolSettingsProperties&#039;]</span>
     </code>
             
 </article>
